unpackaged/objects/BatchSettings__c.object
<CustomObject>
  <customSettingsType>List</customSettingsType>
  <description>These settings control the behavior of several custom Batch Apex jobs and their execution scheduling.</description>
  <fields>
    <fullName>CallReportEventTriggerAfterInsertIsEnabl__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables or disables the trigger that sets the related to field on an event if the event is saved only with a related contact (Who ID)</inlineHelpText>
    <label>Enable CallReportEventTriggerAfterInsert</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CallReportEventTriggerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables or disables the trigger that ensures all events also have a linked call report object</inlineHelpText>
    <label>Enable CallReportEventTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CampMgmtCampaignMemberTriggerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the CampMgmtCampaignMemberTrigger Apex trigger is run on all inserts of CampaignMember records.</description>
    <inlineHelpText>When checked, the CampMgmtCampaignMemberTrigger Apex trigger is run on all inserts of CampaignMember records.</inlineHelpText>
    <label>Enable CampMgmtCampaignMemberTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CampMgmtCampaignSessionTriggerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the CampMgmtCampaignSessionTrigger Apex trigger is run on all inserts of Campaign records.</description>
    <inlineHelpText>When checked, the CampMgmtCampaignSessionTrigger Apex trigger is run on all inserts of Campaign records.</inlineHelpText>
    <label>Enable CampMgmtCampaignSessionTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CampMgmtCampaignSharingTriggerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the CampMgmtCampaignSharingTrigger Apex trigger is run on all modifications to Campaign records.</description>
    <inlineHelpText>When checked, the CampMgmtCampaignSharingTrigger Apex trigger is run on all modifications to Campaign records.</inlineHelpText>
    <label>Enable CampMgmtCampaignSharingTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CampMgmtCampaignTriggerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the CampMgmtCampaignTrigger Apex trigger is run on all inserts of Campaign records.</description>
    <inlineHelpText>When checked, the CampMgmtCampaignTrigger Apex trigger is run on all inserts of Campaign records.</inlineHelpText>
    <label>Enable CampMgmtCampaignTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CampMgmtEngagementTriggerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the CampMgmtEngagementTrigger Apex trigger is run on all modifications to Engagement records.</description>
    <inlineHelpText>When checked, the CampMgmtEngagementTrigger Apex trigger is run on all modifications to Engagement records.</inlineHelpText>
    <label>Enable CampMgmtEngagementTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CventEventInternalTriggerIsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable CventEventInternalTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>DisableContractTriggerHelperUpdSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable ContractTriggerHelper_updSales</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>EvLaunchRefreshIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the EvLaunchRefresh batch job is included in the scheduling chain started daily by the external integration.</description>
    <inlineHelpText>When checked, the EvLaunchRefresh batch job is included in the scheduling chain started daily by the external integration.</inlineHelpText>
    <label>Enable EvLaunchRefresh</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>OrderSetAccountOwnerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the OrderSetAccountOwner Apex trigger is run on all inserts and updates of Order records.</description>
    <inlineHelpText>When checked, the OrderSetAccountOwner Apex trigger is run on all inserts and updates of Order records.</inlineHelpText>
    <label>Enable OrderSetAccountOwner</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ProdSyncRefreshIsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the ProdSyncRefresh batch job is included in the scheduling chain started daily by the external integration.</description>
    <inlineHelpText>When checked, the ProdSyncRefresh batch job is included in the scheduling chain started daily by the external integration.</inlineHelpText>
    <label>Enable ProdSyncRefresh</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>PushAmountToOpportunitiesIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the PushAmountToOpportunities Apex trigger is run on all updates of Account records.</description>
    <inlineHelpText>When checked, the PushAmountToOpportunities Apex trigger is run on all updates of Account records.</inlineHelpText>
    <label>Enable PushAmountToOpportunities</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>StstRefreshIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the StstRefresh batch job is included in the scheduling chain started daily by the external integration.</description>
    <inlineHelpText>When checked, the StstRefresh batch job is included in the scheduling chain started daily by the external integration.</inlineHelpText>
    <label>Enable StstRefresh</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>TotalCFEsCountryPartitions__c</fullName>
    <defaultValue>2</defaultValue>
    <description>The TotalCFEsRefresh job is executed by country for query selectivity reasons. The events in each country are further partitioned randomly into groups per country (e.g. US1, US2, ...). This setting determines the number of such sub-partitions per country. This value can be increased to increase query selectivity if needed.</description>
    <inlineHelpText>Determines the number of sub-partitions per country when processing events. See description for more information.</inlineHelpText>
    <label>TotalCFEs Country Partitions</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>TotalCFEsRefreshIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the TotalCFEsRefresh batch job is included in the scheduling chain started daily by the external integration.</description>
    <inlineHelpText>When checked, the TotalCFEsRefresh batch job is included in the scheduling chain started daily by the external integration.</inlineHelpText>
    <label>Enable TotalCFEsRefresh</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>TotalCFEsTriggerIsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the TotalCFEsTrigger apex trigger is run on all modifications to Event records.</description>
    <inlineHelpText>When checked, the TotalCFEsTrigger apex trigger is run on all modifications to Event records.</inlineHelpText>
    <label>Enable TotalCFEsTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>TotalSalesRefreshIsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the TotalSalesRefresh batch job is included in the scheduling chain started daily by the external integration.</description>
    <inlineHelpText>When checked, the TotalSalesRefresh batch job is included in the scheduling chain started daily by the external integration.</inlineHelpText>
    <label>Enable TotalSalesRefresh</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>TotalSalesTriggerIsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the TotalSalesTrigger apex trigger is run on all modifications to Sales_History__c records.</description>
    <inlineHelpText>When checked, the TotalSalesTrigger apex trigger is run on all modifications to Sales_History__c records.</inlineHelpText>
    <label>Enable TotalSalesTrigger</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>WonLostRefreshIsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the WonLostRefresh batch job is included in the scheduling chain started daily by the external integration.</description>
    <inlineHelpText>When checked, the WonLostRefresh batch job is included in the scheduling chain started daily by the external integration.</inlineHelpText>
    <label>Enable WonLostRefresh</label>
    <type>Checkbox</type>
  </fields>
  <label>Batch Settings</label>
</CustomObject>